sanu commit 2nd

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       </div>
     </section>
 
+    <footer>
+      <p class="gg">All Rights Reserved By &copy; DESO</p>
+  </footer>
   </div>
 </body>
 
