--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <button type="button" class="btn btn-outline-light  btn-lg btn2"> Start Building</button>
     </div>
     <div class="col-lg-6 re">
-      <img class="rotated" src="pic2.png" alt="iphone-mockup">
+      <img class="rotated" src="transparent-background-moon-19.png" alt="iphone-mockup">
     </div>
     <!-- mt part -->
     <div class="section stats wf-section">
