--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             </li>
 
             <li class="nav-item">
-              <a style="color: White;" class="nav-link" href="#"><span class="color3">Re</span>sourcess</a>
+              <!-- <a style="color: White;" class="nav-link" href="#"><span class="color3">Re</span>sourcess</a> -->
+              <button style="color: White;" class="btn nav-link btn-outline-light ethar"><i class="fa-brands fa-ethereum">ETH/200</i></button>
             </li>
 
 
@@ -99,14 +100,28 @@
       </div>
     </div>
 
+<div class="heading2">
+  <h1><span class="color1">O</span>ur Team</h1>
+</div>
+
+
     <section>
       <div class="container">
-        <div class="left"></div>
-        <div class="right">
-          <div class="content">
+        <div class="left">
+          <ul class="team">
+            <li><span class="color1">UT</span>SAV CHATTERJEE</li>
+            
+            <li><span class="color1">SA</span>NTANU JANA</li>
+            <li><span class="color1">SO</span>URAV BAIN</li>
+            <li><span class="color1">SU</span>PRATIM DAS</li>
+            <li><span class="color1">SA</span>YAN CHATTERJEE</li>
+          </ul>
+        </div>
+        <div class="right ">
+          <div class="content ">
             <h1>This is a heading</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia assumenda dolore reprehenderit ullam blanditiis ex sapiente pariatur tempore incidunt facilis?</p>
-            <a href="#" class="btn">Click Me</a>
+            <a href="#" class="btn2 ">Click Me</a>
           </div>
         </div>
       </div>
