sanu commit 6th

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <button type="button" class="btn btn-outline-light  btn-lg btn2"> Start Building</button>
     </div>
     <div class="col-lg-6 re">
-      <img class="rotated" src="transparent-background-moon-19.png" alt="iphone-mockup">
+      <img class="rotated" src="WhatsApp_Image_2022-07-15_at_9.23.11_PM-removebg-preview.png" alt="iphone-mockup">
     </div>
     
     <!-- mt part -->
@@ -118,7 +118,7 @@
             <li><span class="color1">UT</span>SAV CHATTERJEE</li>
             <li><span class="color1">SA</span>NTANU JANA</li>
             <li><span class="color1">SO</span>URAV BAIN</li>
-            <li><span class="color1">SU</span>PRATIM DAS</li>
+            <li><span class="color1">SU</span>PRATIM MAJUMDER</li>
             <li><span class="color1">SA</span>YAN CHATTERJEE</li>
           </ul>
         </div>
