--- a/After Login/login.html
+++ b/After Login/login.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blockchain</title>
-  <link rel="stylesheet" href="style.css">
+  <title>After Login</title>
+  <link rel="stylesheet" href="../style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -79,7 +79,12 @@
       <button type="button" class="btn btn-outline-light  btn-lg btn2"> Start Building</button>
     </div>
     <div class="col-lg-6 re">
-      <img class="rotated" src="pic.png" alt="iphone-mockup">
+      <!-- <img class="rotated" src="transparent-background-moon-19.png" alt="iphone-mockup"> -->
+      <div id="myfirst" class="extra">
+        <i id="it1" class="fa-brands fa-ethereum fa-3x"></i>
+        <p id="it2">Amount</p>
+        <p id="it3">Ethereum</p>
+      </div>
     </div>
     
     <!-- mt part -->
@@ -133,7 +138,7 @@
   </footer>
   </div>
 </div>
-  
+ 
 </body>
 
 </html>
